--- a/css/scrollbar.css
+++ b/css/scrollbar.css
@@ -10,6 +10,7 @@
 /* Scrollbar rail styles */
 .ps__rail-x,
 .ps__rail-y {
+  opacity: 0;
   -webkit-transition: background-color 0.2s linear, opacity 0.2s linear;
   transition: background-color 0.2s linear, opacity 0.2s linear;
   position: absolute;
@@ -31,12 +32,23 @@
   background-color: transparent;
 }
 
+.ps__rail-x:hover,
+.ps__rail-y:hover,
+.ps--scrolling-x .ps__rail-x,
+.ps--scrolling-y .ps__rail-y {
+  opacity: 0.5;
+}
+
+.ps__rail-x.ps--clicking,
+.ps__rail-y.ps--clicking {
+  opacity: 0.9;
+}
+
 /* Scollbar thumb styles */
 .ps__thumb-x,
 .ps__thumb-y {
-  background-color: #999;
+  background-color: #aaa;
   border-radius: 10px;
-  opacity: 0;
   position: absolute;
   -webkit-transition: background-color 0.2s linear, height 0.2s ease-in-out;
   transition: background-color 0.2s linear, height 0.2s ease-in-out;
@@ -52,23 +64,18 @@
   width: 6px;
 }
 
-.ps:hover .ps__thumb-x,
-.ps:hover .ps__thumb-y {
-  opacity: 0.3;
-}
-
-.ps .ps__thumb-x:hover,
-.ps .ps__thumb-x:focus,
-.ps .ps__rail-x.ps--clicking .ps__thumb-x {
-  opacity: 0.85;
+.ps__thumb-x:hover,
+.ps__thumb-x:focus,
+.ps__rail-x.ps--clicking .ps__thumb-x {
+  background-color: #999;
   bottom: 0px !important;
   height: 10px !important;
 }
 
-.ps .ps__thumb-y:hover,
-.ps .ps__thumb-y:focus,
-.ps .ps__rail-y.ps--clicking .ps__thumb-y {
-  opacity: 0.85;
+.ps__thumb-y:hover,
+.ps__thumb-y:focus,
+.ps__rail-y.ps--clicking .ps__thumb-y {
+  background-color: #999;
   right: 0px !important;
   width: 10px !important;
 }
